# fastapi-auth-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: format.yml  test.yml
.github/workflows/: format_and_test.yml
app/: .env.dev  Makefile  main.py
app/migrations/: env.py
app/migrations/versions/: 20250312_1258-f1468e5f6b88_init_table_user_and_role.py
app/src/: config.py
app/src/depedencies/: database.py  rate_limiter.py
app/src/helpers/: auth.py  database.py  error_database.py  generator.py  password_validator.py
app/src/integrations/: mfa.py  redis.py
app/src/models/: _base_default.py  roles.py  services.py  users.py
app/src/repositories/: auth.py
app/src/routers/: auth.py
app/src/schemas/: _default_base.py
app/src/schemas/roles/: base.py
app/src/schemas/services/: base.py
app/src/schemas/users/: __init__.py  base.py  payload.py  query.py  response.py
app/src/services/: auth.py
src/: alembic.ini
src/app/: .env.example  config.py  main.py
src/app/depedencies/: auth.py  rate_limiter.py
src/app/exceptions/: admin.py  auth.py  business_roles.py  database.py  member.py  roles.py  services.py
src/app/helpers/: auth.py  database.py  error_database.py  generator.py  generator_jwt.py  logger.py  password_validator.py  response_api.py  user_validator.py
src/app/integrations/: mail.py  mfa.py  redis.py
src/app/middleware/: error_response.py  logger.py
src/app/models/: business_roles.py  roles.py  services.py  users.py
src/app/repositories/: admin.py  auth.py  business_roles.py  member.py  roles.py  services.py
src/app/routers/: admin.py  auth.py  business_roles.py  member.py  roles.py  services.py
src/app/schemas/business_roles/: base.py  payload.py  response.py
src/app/schemas/member/: __init__.py  payload.py  response.py
src/app/schemas/roles/: base.py  payload.py  response.py
src/app/schemas/services/: base.py  payload.py  response.py
src/app/schemas/users/: __init__.py  base.py  payload.py  query.py  response.py
src/app/services/: admin.py  auth.py  business_roles.py  member.py  roles.py  services.py
src/app/templates/: reset_password_page.html
src/migrations/: env.py
src/migrations/versions/: 20250312_1258-f1468e5f6b88_init_table_user_and_role.py
src/tests/: conftest.py
src/tests/fixtures/auth/: roles.py
src/tests/test_app/: test_main.py
src/tests/test_app/depedencies/: test_auth_deps.py
src/tests/test_app/helpers/: test_password_validator.py  test_user_validator.py
(+9 files in other folders)
