[project]
name = "fastapi-auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.11",
    "multipart==1.2.1",
    "pydantic[email]==2.10.6",
    "pydantic-settings==2.8.1",
    "pyotp==2.9.0",
    "sqlalchemy==2.0.39",
    "uvicorn==0.34.0",
    "qrcode==8.0",
    "psycopg[binary,pool]==3.2.6",
    "alembic==1.15.1",
    "argon2-cffi==23.1.0",
    "mypy>=1.15.0",
    "uuid-utils==0.10.0",
    "slowapi==0.1.9",
    "python-jose>=3.4.0",
    "structlog>=25.2.0",
    "passlib>=1.7.4",
    "redis>=5.2.1",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.0",
]
tests = [
    "httpx>=0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov==6.0.0",
]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*:",
    "ignore::DeprecationWarning:argon2.*:"
]
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = "--cov-report=term-missing --cov=src/app"
asyncio_default_fixture_loop_scope = "function"  # for pytest-asyncio so that the default loop is not shared between tests

[tool.coverage.run]
source = ["src/app"]

[tool.coverage.report]
fail_under = 50
